
2017-01-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): corrected minimum check for OCCURS

2017-01-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (print_program_header): print only one page header when -tlines=0
	  is used and removed the " Page 0001" that would always be printed
	* cobc.c: new function print_program_data for output of data to the list
	  file - needed for suppressing empty lines after page header and for
	  correct counting of lines per page
	* cobc.h, cobc.c: moved all listing #define from cobc.h to cobc.c

2017-01-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h: added CB_CS_ALLOCATE
	* reserved.c: set context sensitivity: CAPACITY -> OCCURS,
	  INITIALIZED -> ALLOCATE, OCCURS

2017-01-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: always emit an internal move for WRITE/REWRITE if the FROM
	  clause consist of a literal
	* typeck.c (cb_check_overlapping): fixed handling when called with a field
	  instead of with a reference (which is the case for level 88 validation)
	* codegen.c (output_data): added resolve of CB_TAG_FIELD

2017-01-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (accept_body): check that PROMPT and SIZE clauses are not set
	  for ACCEPT OMITTED (as these are ignored at run-time)
	* typeck.c (cb_emit_accept): bugfix - extended ACCEPT wasn't used if the
	  only attributes set were: timeout || prompt || size_is
	* cobc.c (cobc_sig_handler): fixed TODO about unused var
	* cobc.c (process)[WIFSIGNALED]: use cob_raise instead of cobc_sig_handler

2017-01-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h: new variable current_compile_time for resolving all
	  compilation dates, set by call to libcob's cob_get_current_date_and_time
	* typeck.c (cb_build_registers): use time from current_compile_time